# app/http/module/user/api.go
@@ -17,11 +17,13 @@ func RegisterRoutes(r *gin.Engine) error {
 	// 注册
 	r.POST("/user/register", api.Register)
 	// 注册验证
-	r.GET("/user/register/verify", api.Verify)
+	r.GET("/user/register-verify", api.Verify)
 	// 登录
 	r.POST("/user/login", api.Login)
 	// 获取登录用户信息
 	r.GET("/user/userinfo", jwt.JwtMiddleware(), api.UserInfo)
+	// 创建测试用户
+	r.GET("/user/mock-test-user", api.RegisterMockUser)
 
 	return nil
 }
