# app/http/module/user/api_verify.go
@@ -15,7 +15,7 @@ import (
 // @Param captcha query string true "注册的验证码"
 // @Success 200 {object} httputil.Response
 // @Failure 500  {object}  httputil.HTTPError
-// @Router /user/register/verify [get]
+// @Router /user/register-verify [get]
 func (api *UserApi) Verify(c *gin.Context) {
 	// 验证参数
 	userService := c.MustMake(provider.UserKey).(provider.Service)
