# app/http/swagger/swagger.json
@@ -56,6 +56,35 @@
                 }
             }
         },
+        "/user/mock-test-user": {
+            "get": {
+                "description": "添加测试用户 用户名：admin 密码：admin123 邮箱：admin@123.com",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "添加测试用户",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "用户注册接口",
@@ -96,7 +125,7 @@
                 }
             }
         },
-        "/user/register/verify": {
+        "/user/register-verify": {
             "get": {
                 "description": "使用token验证用户注册信息",
                 "consumes": [
